# console_tetris

./: .gitignore  CMakeLists.txt  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
src/: assert.cpp  assert.cppm  block.cpp  block.cppm  buffer.cppm  buffer_2d.cpp  buffer_2d.ixx  engine.cpp  engine.cppm  engine.ixx  engine_utils.cpp  engine_utils.cppm  game.cpp  game.cppm  game.ixx  game_utils.cpp  game_utils.cppm  input.cpp  input.cppm  main.cpp  random.cpp  random.cppm  renderer.cpp  renderer.cppm  renderer.ixx  renderer_utils.cpp  renderer_utils.cppm  ticker.cpp  ticker.cppm  utils.cpp  utils.cppm  utils.ixx  utils_t.cpp  utils_t.cppm
